--- a/web/style.css
+++ b/web/style.css
@@ -67,7 +67,6 @@
 	border-radius: 4px 4px 0 0;
 	
 	padding: 10px;
-	margin: 10px 0;
 	
 	width: 90%;
 	display: block;
@@ -78,15 +77,25 @@
 	bottom: 0;
 	left: 0;
 	
-	width: 90%;
+	width: 100%;
 	
-	margin: 0 30px;
 	padding: 10px;
 	
 	border: none;
 	background-color: var(--secondary-color);
 	
 	font-weight: 800;
+}
+
+#new-doc-form #dinamic-fields #dinamic{
+	border: none;
+	border-bottom: 1px solid var(--secondary-color);
+	border-radius: 4px 4px 0 0;
+	
+	padding: 10px;
+	
+	width: 90%;
+	display: block;
 }
 
 #new-doc-form 
